--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ locale                   : "ko"
 title                    : "Mathematics Story"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : ""
-description              : "The criteria that distinguishes natural science and liberal arts is not mathematics. It is a story about mathematics by a liberal arts student who loves math."
+name                     : "Yujin Kim"
+description              : "A story about Mathematics"
 url                      : "https://sallykim8962.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "sallykim8962/sallykim8962.github.io"
@@ -59,8 +59,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : true
-search_full_content      : true
+search                   : "true"
+search_full_content      : "true"
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -101,7 +101,7 @@ analytics:
 
 # Site Author
 author:
-  name             : ""
+  name             : "Yujin Kim"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "수학을 사랑하는 학생"
   location         : "대한민국, 서울"
