--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://sallykim8962.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "sallykim8962/sallykim8962.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/yujinkim.png" 
+logo                     : "/assets/images/2021-12-20-mathematics logo" 
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
