--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 author:
   name             : "Yujin Kim"
   avatar           : "/assets/images/libe.jpg"
-  bio              : "Mathematics lover"
+  bio              : "Math Holic"
   location         : "Korea, Seoul"
   email            : "21-20306@hafs.hs.kr"
   links:
